fixed spacing on track editor page

--- a/browser/scss/mix/main.scss
+++ b/browser/scss/mix/main.scss
@@ -1,4 +1,28 @@
-
+.mixEditor {
+  h1 {
+    margin-left: 10px;
+    display:inline;
+  }
+  h3 {
+    margin-left: 10px;
+    margin-top: 60px;
+    margin-bottom: 20px;
+  }
+}
+.mixform {
+  margin-top: 20px;
+  margin-left: 10px;
+  width: 800px;
+  margin-bottom: 0;
+  background-color: #fff;
+}
+.playPause {
+  margin-left: 10px;
+  margin-top: -20px;
+}
+.addTrack {
+  margin-left: 10px;
+}
 .item {
   width: 130px;
   margin-left: 5px;
@@ -59,6 +83,8 @@
   background-color: darkgray;
   border-radius: 10px;
   margin-top: 5px;
+  margin-right: 40px;
+  margin-bottom: 40px;
   i {
     font-size: 100px;
     opacity: 0.7;
