--- a/public/style.css
+++ b/public/style.css
@@ -117,6 +117,29 @@ tutorial-section-menu {
   .loop-editor-container canvas {
     border: 1px solid #ccc; }
 
+.mixEditor h1 {
+  margin-left: 10px;
+  display: inline; }
+
+.mixEditor h3 {
+  margin-left: 10px;
+  margin-top: 60px;
+  margin-bottom: 20px; }
+
+.mixform {
+  margin-top: 20px;
+  margin-left: 10px;
+  width: 800px;
+  margin-bottom: 0;
+  background-color: #fff; }
+
+.playPause {
+  margin-left: 10px;
+  margin-top: -20px; }
+
+.addTrack {
+  margin-left: 10px; }
+
 .item {
   width: 130px;
   margin-left: 5px;
@@ -173,7 +196,9 @@ tutorial-section-menu {
   float: right;
   background-color: darkgray;
   border-radius: 10px;
-  margin-top: 5px; }
+  margin-top: 5px;
+  margin-right: 40px;
+  margin-bottom: 40px; }
   .trash i {
     font-size: 100px;
     opacity: 0.7; }
